# CMakeTemplate

./: CMakeLists.txt  README.md
src/: main.cpp
test/: CMakeLists.txt
